--- a/src/zanben/cards/templates/cards/cards.html
+++ b/src/zanben/cards/templates/cards/cards.html
@@ -1,8 +1,12 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'cards/style.css' %}" />
+
 <form method="post" action="">
     {% csrf_token %}
-    Deck Size: {{ form.deckSize }}<br/>
-    Number of Cards In Category: {{ form.numCardsInCategory }}<br/>
-    P ( X >= n): {{ form.numAtLeast }}<br/>
-    Number of Draw Attempts: {{ form.numDraws }}<br/>
+    <div>Deck Size: {{ form.deckSize }}</div>
+    <div>Number of Cards In Category: {{ form.numCardsInCategory }}</div>
+    <div>P ( X >= n): {{ form.numAtLeast }}</div>
+    <div>Number of Draw Attempts: {{ form.numDraws }}</div>
     <input type="submit" value="equals" />
 </form>
